# fastapi_instagram

.github/workflows/: ci.yml
backend/: alembic.ini  base.py  config.py  main.py  pyproject.toml
backend/auth/: models.py
backend/tests/: test_status.py
