[tool.poetry]
name = "fastapi_instagram"
version = "0.1.0"
description = "Fastapi project"
authors = ["ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
pydantic = {extras = ["email"], version = "^1.9.0"}
uvicorn = "^0.17.6"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.25.0"
databases = "^0.5.5"
python-multipart = "^0.0.5"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.26.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
